--- a/src/myStyles.css
+++ b/src/myStyles.css
@@ -536,9 +536,94 @@ option {
 .user-display {
     display: flex;
     flex-direction: row;
-    width: 100vw;
+    width: 90vw;
     justify-content: space-evenly;
+    margin: 0 auto;
     margin-top: 2%;
+}
+
+.user-display img{
+    width: 60px;
+    height: 60px;
+}
+
+.logout {
+    display: flex;
+    width: 100%;
+    height: 30vh;
+    margin-top: 100px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.checkout {
+    overflow-y: auto;
+    font-family: 'Bebas Neue', cursive;
+    width: 100vw;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 2%;
+}
+
+.checkout-container {
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    height: 50%;
+    justify-content: space-evenly;
+    align-items: center;
+    background: linear-gradient(to right, #c31432, #240b36);
+    border: 1px solid #fff;
+    border-radius: 7px;
+    margin-top: 2%;
+    
+}
+
+.checkout-card {
+    display: flex;
+    flex-direction: column !important; 
+    width: 90%;
+    justify-content: center !important;
+    align-items: center !important;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.checkout-container h1 {
+    margin-bottom: 2%;
+    border-bottom: 1px solid #fff;
+}
+.checkout-container h2 {
+    font-size: 30px;
+}
+
+
+.checkout-card h3 {
+    width: 80%;
+    font-size: 25px;
+}
+
+.register-div-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 130px;
+    margin-top: 3%;
+    border-top: 1px solid #fff;
+}
+
+.login-google-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -1126,7 +1211,7 @@ footer {
         font-size: 14px;
         font-weight: 300;
         outline: 0;
-        margin-bottom: 3%;
+        margin-bottom: 1.5%;
         border-top: 1px solid #fff
     }
 
@@ -1146,6 +1231,7 @@ footer {
         min-height: 40vh;
         max-height: 50vh;
     }
+
     .register-div-button {
         display: flex;
         flex-direction: column;
@@ -1157,6 +1243,9 @@ footer {
     }
     .login-google-button {
         margin-top: 2%;
+    }
+    .login-google-button button {
+        margin-bottom: 1%;
     }
 
     .register-inputs button {
@@ -1181,6 +1270,45 @@ footer {
         width: 95%;
         flex-wrap: nowrap;
         justify-content: space-between;
+    }
+
+    .checkout-card {
+        display: flex;
+        flex-direction: row !important; 
+        width: 90%;
+        justify-content: space-between !important;
+        align-items: center !important;
+        margin-bottom: 20px;
+    }
+
+    .checkout-container {
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
+        width: 70%;
+        height: 80%;
+        justify-content: space-evenly;
+        align-items: center;
+        background: linear-gradient(to right, #c31432, #240b36);
+        border: 1px solid #fff;
+        border-radius: 7px;
+        margin-top: 2%;
+        
+    }
+
+    .checkout {
+        font-family: 'Bebas Neue', cursive;
+        width: 100vw;
+        height: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .checkout-card h3 {
+        width: 20%;
+        font-size: 25px;
     }
     
     /* .row1 {
