--- a/src/myStyles.css
+++ b/src/myStyles.css
@@ -114,6 +114,7 @@ body {
     overflow-y: scroll;
     overflow-x: hidden;
     min-height: 20vh;
+    z-index: 9999;
 }
 
 #cart-list {
@@ -364,7 +365,7 @@ option {
 
 .generic-button {
     text-align: center;
-    padding: 10px 35px;
+    padding: 10px 30px;
     border-radius: 40px;
     border: none;
     cursor: pointer;
@@ -376,6 +377,7 @@ option {
     align-self: center;
     box-shadow: 2.5px 2.5px 2.5px rgba(0,0,0,0.15);
     font-family: 'Bebas Neue', cursive;
+    max-height: 60px;
 }
 
 .btn-show-all {
@@ -535,12 +537,18 @@ option {
 } */
 
 .user-display {
+    font-family: 'Bebas Neue', cursive;
+    font-size: 20px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     width: 90vw;
     justify-content: space-evenly;
     margin: 0 auto;
     margin-top: 2%;
+    margin-bottom: 2%;
+    align-items: center;
+    text-align: center;
+
 }
 
 .user-display img{
@@ -625,6 +633,72 @@ option {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.orders {
+    min-height: 300px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.orders h1 {
+    font-family: 'Bebas Neue', cursive;
+    font-size: 40px;
+    border-bottom: 1px solid #fff;
+    margin-bottom: 4%;
+}
+.orders h2, .orders h3 {
+    font-family: 'Bebas Neue', cursive;
+
+}
+
+.orders h3{
+    font-size: 25px;
+}
+.orders h2{
+    font-size: 28px;
+}
+
+.orders span {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 900;
+    font-size: 25px;
+    margin-left: 3%;
+}
+
+.order-card {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 1);
+    padding: 20px ;
+    border-radius: 40px;
+    margin-bottom: 3%;
+
+}
+
+.order-total{
+    margin: 0 auto;
+    /* align-self: center; */
+}
+
+.order-info {
+    border-bottom: 1px solid #fff;
+    margin-bottom: 2%;
+}
+
+.order-id {
+    text-align: center;
+    width: 60%;
+    margin: 0 auto;
+    border: 1px solid #fff;
+    border-radius: 20px;
+    padding: 5px;
 }
 
 
@@ -1316,19 +1390,81 @@ footer {
         width: 20%;
         font-size: 25px;
     }
-    
-    /* .row1 {
-        display: flex;
+
+    .orders {
+        min-height: 300px;
         width: 100%;
-        flex-direction: row;
-    }
-    .row2 {
         display: flex;
-        width: 100%;
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
     }
-     */
+    
+    .orders h1 {
+        font-family: 'Bebas Neue', cursive;
+        font-size: 40px;
+        border-bottom: 1px solid #fff;
+        margin-bottom: 2%;
+    }
+    .orders h2, .orders h3 {
+        font-family: 'Bebas Neue', cursive;
+
+    }
+
+    .orders h3{
+        font-size: 25px;
+    }
+    .orders h2{
+        font-size: 28px;
+    }
+
+    .orders span {
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 900;
+        font-size: 25px;
+        margin-left: 3%;
+    }
+
+    .order-card {
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
+        border: 1px solid rgba(255, 255, 255, 1);
+        padding: 20px ;
+        border-radius: 40px;
+        margin-bottom: 1%;
+
+    }
+
+    .order-total{
+        margin: 0 auto;
+        /* align-self: center; */
+    }
+
+    .order-info {
+        border-bottom: 1px solid #fff;
+        margin-bottom: 1%;
+    }
+
+    .order-id {
+        margin-left: 20%;
+    }
+
+    .user-display {
+        font-family: 'Bebas Neue', cursive;
+        font-size: 20px;
+        display: flex;
+        flex-direction: row;
+        min-width: 40vw;
+        max-width: 95vw;
+        justify-content: space-evenly;
+        margin: 0 auto;
+        margin-top: 2%;
+        margin-bottom: 2%;
+    }
+    
     .row2 div, .row1 div {
         display: flex;
         flex-direction: column;
@@ -1336,16 +1472,6 @@ footer {
         margin-bottom: 2% ;
     }
     
-    /* .row1 input, .row2 input{
-        width: 90%;
-        margin-bottom: 4%;
-    }
-    .row1 label, .row2 label{
-        width: 90%;
-        margin-top: 7%;
-        margin-bottom: 2%;
-    } */
-
     .modal-error, .modal-message {
         width: 30vw;
     }
@@ -1395,6 +1521,33 @@ footer {
         overflow: hidden;
         justify-content: center;
         margin-bottom: 5%;
+    }
+    .user-display {
+        font-family: 'Bebas Neue', cursive;
+        font-size: 25px;
+        display: flex;
+        flex-direction: row;
+        width: 90vw;
+        justify-content: space-evenly;
+        margin: 0 auto;
+        margin-top: 2%;
+        margin-bottom: 2%;
+        align-items: center;
+        text-align: center;
+    
+    }
+    .order-card {
+        display: flex;
+        flex-direction: column;
+        width: 30%;
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
+        border: 1px solid rgba(255, 255, 255, 1);
+        padding: 20px ;
+        border-radius: 40px;
+        margin-bottom: 1%;
+
     }
 }
 @media only screen and (min-width: 1200px){
