--- a/src/myStyles.css
+++ b/src/myStyles.css
@@ -14,7 +14,6 @@ body {
     overflow-y: scroll;
     overflow-x: hidden;
     background-color: rgb(35, 35, 35);
-    
 }
 
 .nav-desktop {
@@ -512,29 +511,6 @@ option {
     margin-bottom: 2%;
 }
 
-/* .noStock {
-    padding: 10px 30px;
-    border-radius: 40px;
-    cursor: not-allowed;
-    border: 0.2px solid rgba(0, 0, 0, 0.3);
-    font-weight: bold;
-    background-color: gray;
-    color: darkgrey;
-    box-shadow: 2.5px 2.5px 2.5px rgba(0,0,0,0.15);
-    font-family: 'Open Sans', sans-serif;
-    font-size: 15px;
-    margin-bottom: 2%;
-}
-
-.noStock:hover{
-    padding: 10px 30px;
-    border-radius: 40px;
-    cursor: not-allowed;
-    border: 0.2px solid rgba(0, 0, 0, 0.3);
-    background-color: gray;
-    color: darkgrey;
-    box-shadow: 2.5px 2.5px 2.5px rgba(0,0,0,0.15);
-} */
 
 .user-display {
     font-family: 'Bebas Neue', cursive;
@@ -641,6 +617,7 @@ option {
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 0;
 }
 
 .orders h1 {
@@ -679,12 +656,13 @@ option {
     padding: 20px ;
     border-radius: 40px;
     margin-bottom: 3%;
+    z-index: 0;
+    position: sticky;
 
 }
 
 .order-total{
     margin: 0 auto;
-    /* align-self: center; */
 }
 
 .order-info {
@@ -701,7 +679,6 @@ option {
     padding: 5px;
 }
 
-
 /* --------------------------- */
 #main-container-hamburguer {
     display: flex;
@@ -713,6 +690,11 @@ option {
     width: 100%;
     height: 50px;
     background:rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+}
+
+#hamburguer {
+    z-index: 999;
 }
 
 #hamburguer button {
@@ -944,14 +926,12 @@ th:nth-child(5), th:nth-child(1){
     display: flex;
     flex-direction: column;
     width: 90%;
-    /* border-top: 1px solid #fff; */
 }
 
 .register-inputs form {
     display: flex;
     flex-direction: column;
     width: 90%;
-    /* border-top: 1px solid #fff; */
 }
 
 .register-inputs form button {
@@ -1003,23 +983,6 @@ th:nth-child(5), th:nth-child(1){
 .modal-message p {
     font-size: 20px;
     opacity: 0.8;
-}
-
-.modal-error {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border: 3px solid red;
-    background-color: rgb(234, 85, 85);
-    color: #fff;
-    font-size: larger;
-    font-weight: 500;
-    padding: 10px 30px;
-    width: 50vw;
-    max-width: 100%;
-    border-radius: 7px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    text-align: center;
 }
 
 .modal-error p {
