--- a/src/myStyles.css
+++ b/src/myStyles.css
@@ -1002,9 +1002,21 @@ th:nth-child(5), th:nth-child(1){
     padding: 5px 7px;
 }
 
-.go-upi img {
+.go-up img {
     width: 45px;
     height: 45px;
+}
+
+.not-found {
+    font-family: 'Bebas Neue', cursive;
+    width: 100%;
+    height: 80vh;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: larger;
 }
 
 .about-us {
